@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          add_route_unless_exists
 
 0.001     2011-11-10 15:51:40 America/New_York
           first release!
